working on card display

--- a/client/index.html
+++ b/client/index.html
@@ -46,7 +46,44 @@
 
 
         <div id="selection_card">
-
+            <div class="selection_card_images">
+                    <div class="selection_card_champion">
+                        <div class="selection_card_hexagram" id="card_walk_white">   <div class="top"></div>  <div class="bottom"></div>   </div>
+                        <div class="selection_card_hexagram" id="card_dodge_white">   <div class="top"></div>  <div class="bottom"></div>   </div>
+                        <div class="selection_card_hexagram" id="card_shield_white">   <div class="top"></div>  <div class="bottom"></div>   </div>
+                        <div class="selection_card_hexagram" id="card_heart_white">   <div class="top"></div>  <div class="bottom"></div>   </div>
+                        <div class="selection_card_hexagram card_hex_big" >   
+                            <div class="top"></div>  
+                            <div class="bottom"></div>
+                            <div class="card_heroImg" style=background-image:url(../../img/Lorsann.png)></div>
+                        </div>
+                        <div class="selection_card_hexagram card_hex_big">   
+                            <div class="top"></div>  
+                            <div class="bottom"></div>   
+                            <div class="card_heroImg" style=background-image:url(../../img/Lorsann.png)></div>
+                        </div>
+                    </div>
+                    <div class="selection_card_champion">
+                        <div class="selection_card_hexagram attribute" id="card_walk_white">   <div class="top"></div>  <div class="bottom"></div>   </div>
+                        <div class="selection_card_hexagram attribute" id="card_dodge_white">   <div class="top"></div>  <div class="bottom"></div>   </div>
+                        <div class="selection_card_hexagram attribute" id="card_shield_white">   <div class="top"></div>  <div class="bottom"></div>   </div>
+                        <div class="selection_card_hexagram attribute" id="card_heart_white">   <div class="top"></div>  <div class="bottom"></div>   </div>
+                        <div class="selection_card_hexagram card_hex_big">   
+                            <div class="top"></div>  
+                            <div class="bottom"></div>
+                            <div class="card_heroImg" style=background-image:url(../../img/Lorsann.png)></div>
+                       </div>
+                        <div class="selection_card_hexagram card_hex_big">   
+                            <div class="top"></div>  
+                            <div class="bottom"></div>
+                            <div class="card_heroImg" style=background-image:url(../../img/Lorsann.png)></div>
+                       </div>
+                    </div>
+            </div>
+            <div class="selection_card_skills">
+                <div id="champion_card_skills" class="card_skills"></div>
+                <div id="unit_class_skills" class="card_skills skills_unit"></div>
+            </div>
         </div>
 
 
