adding abilities descriptions continues, hexlings are last shapers to be added and all of slayers.

--- a/client/index.html
+++ b/client/index.html
@@ -136,7 +136,7 @@
             </form>
         </div>
     </section>
-
+    <script src="./code/methods.js"></script>
     <script src="./code/constructor.js"></script>
     <script src="./code/cardStitcher.js"></script>
     <script src="./code/app.js"></script>
