animation for character switching added, chosen players appear in roster, and can be deselected. No I have to make sure that no duplicates are possible and make server validation.

--- a/client/index.html
+++ b/client/index.html
@@ -109,12 +109,12 @@
                 <div class="chosen ch_st">
                     <div class="top"></div>
                     <div class="bottom"></div>
-                    <div class="card_heroImg" style=background-image:url(./img/Lorsann.png)></div>
+                    <div class="card_heroImg" ></div>
                 </div>
                 <div class="chosen ch_nd">
                     <div class="top"></div>
                     <div class="bottom"></div>
-                    <div class="card_heroImg" style=background-image:url(./img/Rhodri.png)></div>
+                    <div class="card_heroImg" ></div>
                 </div>
                 <div class="chosen ch_rd">
                     <div class="top"></div>
@@ -140,5 +140,6 @@
     <script src="./code/constructor.js"></script>
     <script src="./code/cardStitcher.js"></script>
     <script src="./code/app.js"></script>
+    <script src="./code/events.js"></script>
 </body>
 </html>
