motion ui added

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src='https://code.jquery.com/jquery-3.4.1.js' integrity='sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=' crossorigin='anonymous'></script>
     <title>Godtear</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Cardo&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./styles/style.css"/>
     <link rel="stylesheet" type="text/css" href="./styles/_logInScreen.css"/>
@@ -49,7 +50,8 @@
             </form>
         </div>
 
-    </section>
+    <script>var socket = io()</script>
+    <script src="./code/globalVariables.js"></script>
     <script src="./code/methods.js"></script>
     <script src="./code/constructor.js"></script>
     <script src="./code/cardStitcher.js"></script>
