game preparation screen seems ready. still no icon for units.

--- a/client/index.html
+++ b/client/index.html
@@ -9,16 +9,24 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Cardo&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./styles/style.css"/>
+    <script src="./code/motion-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="./styles/motion-ui.css"/>
     <link rel="stylesheet" type="text/css" href="./styles/_logInScreen.css"/>
     <link rel="stylesheet" type="text/css" href="./styles/__breakPoints.css"/>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 <body>
     <section id="gameScreen">
+        <div id="introductory_insructions_info" class="hinge-in-from-top mui-enter">
+            <article>
+                <p id="st_info">click champ to see card</p>
+                <p id="nd_info">click again to add to roster</p>
+                <p id="rd_info">click to continue</p>
+            </article>
+        </div>
+        <div id="card" class=""></div>
 
-        <div id="card"></div>
-
-        <div id="bandNamePlace">
+        <div id="bandNamePlace" class="hinge-in-from-right mui-enter">
             <div id="bandDisplay">
                 <div class="chosen ch_st">
                     <div class="top"></div>
@@ -35,7 +43,7 @@
                     <div class="bottom"></div>
                     <div class="card_heroImg" ></div>
                 </div>
-                <div id="beginGameButton" type="submit" class="bobo">
+                <div id="beginGameButton" type="submit" class="bobo scale-in-down mui-enter">
                     <div class="top"></div>
                     <p class="card_attribute">
                         play
@@ -43,7 +51,7 @@
                     <div class="bottom"></div>
                 </div>
             </div>
-            <form id="gameTypeForm">
+            <form id="gameTypeForm" class="slide-in-up mui-enter">
                 <input type="text" id="gamePlayerName" class="introductionInfo" placeholder="nickname" required>
                 <div id="wronCharWarning"></div>
                 <input type="text" id="gamePlaceName" class="introductionInfo" placeholder="battlefield" required>
