scenarios layout created with functions for easy use with glowing hexes.

--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="./styles/motion-ui.css"/>
     <link rel="stylesheet" type="text/css" href="./styles/_logInScreen.css"/>
     <link rel="stylesheet" type="text/css" href="./styles/__breakPoints.css"/>
+    <link rel="stylesheet" type="text/css" href="./styles/gameEffects.css"/>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 <body>
@@ -24,6 +25,7 @@
     <script src="./code/methods.js"></script>
     <script src="./code/constructor.js"></script>
     <script src="./code/cardStitcher.js"></script>
+    <script src="./code/inGameEvents.js"></script>
     <script src="./code/app.js"></script>
     <script src="./code/events.js"></script>
     <script src="./code/socks.js"></script>
