deployment possible. unregulated.

--- a/client/index.html
+++ b/client/index.html
@@ -31,5 +31,6 @@
     <script src="./code/app.js"></script>
     <script src="./code/events.js"></script>
     <script src="./code/socks.js"></script>
+    <script src="./code/gameElements.js"></script>
 </body>
 </html>
